Got rid of the export button on the graph tab and added the context button back into the highchart. Also graph can be gupdated just by clicking checkbox. Started fixing an issue that breaks the graph tab

--- a/web/styles/dashboard.css
+++ b/web/styles/dashboard.css
@@ -237,6 +237,7 @@ button:hover,input[type = "button"]:hover {
     color:white;
     width:auto;
     height:25px;   
+    display:none;
 }
 
 #exportbutton:hover{
